--- a/content/static/css/main.css
+++ b/content/static/css/main.css
@@ -1,380 +1,193 @@
-html {
-    scroll-behavior: smooth;
+:root {
+    --background: #ffffff;
+    --panelheader: #ffffff;
+    --panel: #dddff3;
+    --textLight: #c2c6db;
+    --tableBorder: #cfd0da;
+    --effect: #ff5277;
+    --effectParam: #ffd0d0;
+    --listOdd: #2b3151;
+    --listEven: #202541;
+    --link: #087ce8;
+    --button: #686f99;
+    --sidebarWidth: 280px;
 }
-
 
 body {
-    font-family: 'Open Sans', sans-serif;
-    letter-spacing: 0.2px;
-    color: #333;
+    background: var(--background);
+        color: #353f5f;
+        font: 16px/135% "Roboto", sans-serif;
+        font-style: normal;
+        font-weight: normal;
+        width: 100%;
     margin: 0;
+    /*max-width: 960px;*/
+        /* padding: 50px; */
+        /* margin: auto; */
+
+    line-height: 1.35em;
+        display: inline-block;
+
+    /* color: var(--panelheader); */
 }
 
-h1 {
-    font-family: 'Noto Serif', serif;
-    font-size: 39px;
-    line-height: 42px;
-    margin-bottom: 50px;
-
-}
-
-h2 {
-    font-family: 'Noto Serif', serif;
-    font-size: 28px;
-    line-height: 30px;
-    text-align: center;
-    color: #333;
-    margin-block-start: 40px;
-    margin-block-end: 30px;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-}
-
-p {
-    font-size: 20px;
-    line-height: 26px;
-}
-
-a {
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
-}
-
-.navbar {
-    overflow: hidden;
-    background-color: #0098f1;
-    color: #333;
-    top: 0;
-    width: 100%;
-    height: 70px;
-    font-size: 15px;
-    text-align: right;
-    padding: 12px 0 0 0;
+aside {
+    height: 100%;
+    /* Full-height: remove this if you want "auto" height */
+    width: var(--sidebarWidth);
+    /* Set the width of the sidebar */
     position: fixed;
+    /* Fixed Sidebar (stay in place on scroll) */
     z-index: 1;
-}
-
-.navbar a {
-    margin-right: 40px;
-    color: #333;
-}
-
-.navbar a:active {
-    text-decoration: underline;
-}
-
-.right a {
-    float: right;
-}
-
-.container {
-    width: 100%;
-}
-
-.top {
-    background-color: #0098f1;
-    height: 650px;
-}
-
-.clear {
-    background-color: #fff;
-    height: auto;
-}
-
-.nav-top {
-    border-top: 8px solid #0098f1;
-}
-
-.row {
-    max-width: 63rem;
-    margin: auto;
-    display: block;
-}
-
-.content {
-    padding: 22px;
-}
-
-.wrapper {
-    display: flex;
-    padding: 22px;
-}
-
-.sidepanel {
-    width: 200px;
-    margin-top: 120px;
-    background-color: #fff;
+    /* Stay on top */
+    top: 0;
+    /* Stay at the top */
+    left: 0;
+    background-color: #14182e;
     overflow-x: hidden;
-    position: fixed;
-    height: 80%;
-
+    /* Disable horizontal scroll */
+    padding-top: 10px;
+}
+article {
+    /* Same as the width of the sidebar */
+    /* padding: 20px 0px 20px 50px; */
+    padding-top: 20px;
+    margin-left: var(--sidebarWidth);
+    padding-left: 50px;
+    padding-right: 30px;
+    max-width: 1200px;
+    min-height: 100%;
+    line-height: 1.5em;
+    /* max-width: 100%; */
+    /* margin-right: 20px; */
 }
 
-.sidepanel a.title {
-    font-family: 'Noto Serif', serif;
-    font-size: 18px;
-    font-weight: 600;
-    text-align: left;
+img {
+    size: 100;
+    filter: drop-shadow(0 0 5px #14182e7a);
+    margin: 0 0 15px 0;
+}
+
+ul {
+    line-height: 1.5em;
+}
+h1 {
+    font-size: 2.75em;
+    color: var(--button);
+    margin: 0px;
+    line-height: 1;
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+h2 {
+    font-size: 1.5em;
+}
+ul.sideNav {
+    list-style-type: none;
+    padding-left: 0px;
+}
+ul.sideNav h2 {
+    color: #ffffff;
+    font-size: 1.1em;
+    margin-bottom: 2px;
+}
+ul.sideNav li {
+    width: calc(100%);
+    padding: 2px 20px;
+}
+ul.sideNav a {
+    color: #b0bdc9;
     text-decoration: none;
-    color: #333;
-    display: block;
-    padding-bottom: 12px;
 }
 
-.sidepanel a.section {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 15px;
-    text-align: left;
-    line-height: 30px;
-    display: block;
+ul.sideNav a li:hover {
+    background-color: #363e6d;
+    color: white;
+    font-size: 1em;
+}
+ul.sideNav a.selected li {
+    color: #1f2235;
+    background-color: var(--tableBorder);
     text-decoration: none;
-    color: #333;
+    font-weight: bold;
 }
 
-.sidepanel a.sub-section {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 15px;
+h4 {
+    font-size: 1.2em;
+    margin: 0px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+p {
+    /* color: var(--textLight); */
+    font-size: 1em;
+    margin: 0 0 15px 0;
+}
+hr {
+    border-top: 1px solid;
+    color: var(--button);
+}
+
+table {
+    width: 100%;
+    border: 1px solid;
+        border-color: var(--tableBorder);
+        border-collapse: collapse;
+    }
+    
+    tr {
+        border: 1px solid;
+        border-color: var(--tableBorder);
+}
+
+td {
+    border-width: 1px;
+    border-style: solid;
+    padding: 4px 8px;
+}
+
+th {
     text-align: left;
-    line-height: 25px;
-    display: block;
-    text-decoration: none;
-    color: #333;
-    padding-left: 20px;
-
+    padding-left: 7px;
+        background: var(--tableBorder);
 }
 
-.sidepanel a.title:hover,
-.sidepanel a.section:hover,
-.sidepanel a.sub-section:hover {
+.fx {
+    font-weight: bold;
+}
+
+.parameterHint {
+    font-style: italic;
+}
+
+.shortcut {
+    font-family: monospace;
+    font-weight: bold;
+    border-color: var(--tableBorder);
+    border-width: 2px;
+    border-style: solid;
+    color: #ff5277;
+    border-radius: 4px;
+    padding: 1px 4px;
+    /* background-color: var(--tableBorder); */
+}
+
+article a {
+    color: var(--link);
+    text-decoration: underline;
+}
+article a:hover {
+    color: var(--effect);
     text-decoration: underline;
 }
 
-.main-col {
-    width: 70%;
-    margin: auto;
-    text-align: center;
+footer {
+    font-size: 0.75em;
+    font-style: italic;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    color: #626570;
 }
-
-.main-col p {
-    font-size: 15px;
-    line-height: 24px;
-    margin-bottom: 36px;
+footer a {
+    color: #626570;
 }
-
-.right-col {
-    margin-top: 100px;
-    text-align: left;
-    width: 100%;
-    margin-left: 220px;
-}
-
-.right-col h1 {
-    font-size: 24px;
-    line-height: 28px;
-    margin-bottom: 24px;
-}
-
-.right-col h2 {
-    font-size: 21px;
-    line-height: 24px;
-    margin-bottom: 30px;
-    text-align: left;
-    margin-block-start: 20px;
-    margin-block-end: 10px;
-}
-
-.right-col p {
-    font-size: 16px;
-    line-height: 22px;
-    margin-bottom: 36px;
-}
-
-.right-col a {
-    color: #0098f1;
-    text-decoration: underline;
-}
-
-.right-col ol {
-    margin-block-start: 10px;
-}
-
-.logo {
-    width: 150px;
-    float: left;
-    margin: -10px 30px;
-}
-
-.col {
-    width: 50%;
-    float: left;
-}
-
-.top-info {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 17px;
-    text-align: center;
-
-}
-
-.divider {
-    width: 40px;
-    height: 4px;
-    background: #0098f1;
-    border-radius: 30px;
-    margin: auto;
-    margin-top: 8px;
-    margin-bottom: 8px;
-}
-
-.left {
-    margin: 20px 0;
-}
-
-
-.footer {
-    float: left;
-    width: 100%;
-    padding: 90px 0 20px;
-    font-size: 15px;
-    text-align: center;
-    background-color: #fff;
-}
-
-.footer a {
-    color: #333;
-}
-
-.resp-break {
-    display: none;
-}
-
-.break {
-    display: block;
-}
-
-.space {
-    height: 30px;
-    width: 100%;
-    float: left;
-}
-
-.double {
-    height: 60px;
-}
-
-.links {
-    float: left;
-    padding-bottom: 8px;
-}
-
-
-
-/* Break Points */
-
-
-/* Extra small-small devices (phones, 420px and down) */
-@media only screen and (max-width: 420px) {
-
-    .logo {
-        width: 100px;
-    }
-
-    .navbar {
-        height: auto;
-    }
-
-    h2 {
-        font-size: 24px;
-    }
-
-    .links {
-        float: none;
-    }
-
-}
-
-
-
-/* Extra small devices (phones, 650px and down) */
-@media only screen and (max-width: 650px) {
-
-    .logo {
-        width: 115px;
-        margin: -10px 0px;
-    }
-
-    .navbar a {
-        padding-bottom: 5px;
-        margin-left: 40px;
-        margin-right: 0;
-    }
-
-    .resp-break {
-        display: block;
-        margin: 17px;
-    }
-
-    .main-col {
-        width: 100%;
-    }
-
-
-    .wrapper {
-        display: block;
-    }
-
-    .sidepanel {
-        width: 100%;
-        text-align: center;
-        position: relative;
-        height: auto;
-    }
-
-    .sidepanel a.title,
-    .sidepanel a.section,
-    .sidepanel a.sub-section {
-        text-align: center;
-    }
-
-    .left {
-        margin: 20px auto;
-    }
-
-    .right-col {
-        position: relative;
-        margin-top: 20px;
-        margin-left: 0px;
-
-    }
-}
-
-/* Small devices (portrait tablets and large phones, 650px and up) */
-@media only screen and (min-width: 650px) {
-
-    .logo {
-        margin: -10px 0px;
-    }
-
-    .right a {
-        float: right;
-        padding-bottom: 5px;
-    }
-
-
-
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) .logo {
-    margin: -10px 0px;
-}
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {}
-
-
-/* End Break Points */
