--- a/content/static/css/main.css
+++ b/content/static/css/main.css
@@ -82,6 +82,13 @@ h1 {
 h2 {
     font-size: 1.5em;
 }
+aside>h1 {
+    font-size: 2em;
+    line-height: 1.2;
+    margin-left: 0.2em;
+    padding-top: 10px;
+    padding-bottom: 0px;
+}
 ul.sideNav {
     list-style-type: none;
     padding-left: 0px;
